--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,9 +18,9 @@
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/ahmedEldefrawy77"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
-                <h4 class="header-subtitle" >Hallo, Ich bin</h4>
+                <h4 class="header-subtitle" >Hallo,schön dass Sie sich auf mein Portfolio interessieren, ich bin</h4>
                 <h1 style="font-size: 80px ;" >Ahmed Eldafrawy</h1>
-                <h6 class="header-mono" >Backend-Entwickler | Server-Side</h6>
+                <h6 class="header-mono" >Backend-Entwickler</h6>
                
             </div>
         </div>
