--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,7 @@
                     <img src="assets/imgs/Pic.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Ahmed Eldafrawy</h5>
-                        <div class="brand-subtitle">Backend-Entwickler | Server-Side</div>
+                        <div class="brand-subtitle">Backend-Entwickler</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -84,7 +84,7 @@
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
                     <li><span>Geburtsdatum</span> : 21/01/1999</li>
-                    <li><span>Email</span> : ahmed.s.m.d77@gmail.com</li>
+                    <li><span>Email</span> : ahmed.dafrawy99@gmail.com</li>
                     <li><span>Mobil</span> : +49 176-649-655-92</li>
                     <li><span>Addresse</span> :  64-Märkischestraße-Dortmund, 44141</li>
                     <li><span>Bildung</span> :  Bachelor in Wirtschaftsinformatik [Tanta-Uni, Ägypten][Note (1.8)]</li>
