--- a/public_html/index.html
+++ b/public_html/index.html
@@ -65,7 +65,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Wer bin ich?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3"> Backend-Entwickler / Server-Side bin in Deutschland</h5>
+                <h5 class="mb-3"> Backend-Entwickler</h5>
                 <p class="mt-20">Ich bin Ahmed Eldafrawy. Ich bin 24 Jahre jung,
                      wurde in Ägypten geboren und bin nur vor einem Jahr in Deutschland angekommen um mein Studium im Bereich Wirtschaftsinformatik in Master weiter zu bilden.
                      was mich als Backend-Entwickler angeht, kombiniere ich mein umfassendes technisches Know-how mit meiner Leidenschaft für innovative Lösungen,
