--- a/public_html/index.html
+++ b/public_html/index.html
@@ -87,7 +87,7 @@
                     <li><span>Email</span> : ahmed.dafrawy99@gmail.com</li>
                     <li><span>Mobil</span> : +49 176-649-655-92</li>
                     <li><span>Addresse</span> :  64-Märkischestraße-Dortmund, 44141</li>
-                    <li><span>Bildung</span> :  Bachelor in Wirtschaftsinformatik [Tanta-Uni, Ägypten][Note (1.8)]</li>
+                    <li><span>Bildung</span> :  BA. in Wirtschaftsinformatik [Tanta-Uni, Ägypten][Note (1.8)]</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="https://www.linkedin.com/in/ahmed-eldafrawy-abbb9b155/"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
