--- a/public_html/index.html
+++ b/public_html/index.html
@@ -108,7 +108,8 @@
                     <li><span>Email</span> : ahmed.dafrawy99@gmail.com</li>
                     <li><span>Mobil</span> : +49 176-649-655-92</li>
                     <li><span>Addresse</span> : 64-Märkischestraße-Dortmund, 44141</li>
-                    <li><span>Bildung</span> : BA. in Wirtschaftsinformatik [Tanta-Uni, Ägypten][Note (1.8)]</li>
+                    <li><span>Bildung</span> : BA. in Wirtschaftsinformatik [Tanta-Uni, Ägypten][Note (1.8)][in
+                        Deutschland anerkannt]</li>
                 </ul>
                 <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link"
@@ -189,17 +190,35 @@
                             </div>
                         </div>
                         <div class="card-body">
-
-                            <h6 class="title text-danger">2023/Mai-Aktuell</h6>
+                            <h6 class="title text-danger">Praktische Erfahrung 2022/Sep - 2024/Jan</h6>
+                            <P>Softwareentwicklungsingenieur</P>
+                            <P class="subtitle">
+                                1. Entwicklung einer benutzerzentrierten Krankenversicherungswebseite mit Fokus auf
+                                Präzision und Zuverlässigkeit durch die Nutzung
+                                von .NET und Angular-Technologien, um die Versicherungserfahrung für Anbieter und
+                                Verbraucher zu optimieren.
+                                2. Wesentliche Beitrag zur Entwicklung von E-Commerce-Projekten, wobei Schwerpunkt auf dem
+                                Aufbau sicherer und responsiver
+                                Webanwendungen lag. Von der Implementierung komplexer Zahlungsgateways bis zur
+                                Optimierung von Datenbankabfragen für
+                                3. verbesserte Leistung wurden Herausforderungen der modernen E-Commerce-Entwicklung
+                                erfolgreich gemeistert.
+                                Aktive Beteiligung am gesamten Softwareentwicklungslebenszyklus bei Inno Tech,
+                                einschließlich Ideenfindung, Anforderungserfassung,
+                                4. Bereitstellung und Wartung. Förderung einer Kultur kontinuierlicher Verbesserung durch
+                                die Implementierung bewährter Verfahren
+                                wie Codeüberprüfung, Testing und Bereitstellungsautomatisierung.
+                            </P>
+                            <h6 class="title text-danger">2022/April</h6>
                             <P>Frontend-Entwicklung</P>
-                            <P class="subtitle">Ich habe im Mai begonnen,
+                            <P class="subtitle">Ich habe im April begonnen,
                                 etwas über Frontend-Entwicklung zu lernen,
                                 um mein Wissen auf meinem Weg zum Full-Stack-Entwickler zu vertiefen</P>
                             <hr>
-                            <h6 class="title text-danger">2022/Oktober bis 2023/April</h6>
+                            <h6 class="title text-danger">2022/April </h6>
                             <P>Backend-Entwickler</P>
                             <P class="subtitle">Ich habe einen Programmierkurs in C# im Rahmen eines Praktikums für ein
-                                Unternehmen namens Inno Tech absolviert und es dauerte 6 Monate.
+                                Unternehmen namens Inno Tech absolviert und es dauerte 3 Monate.
                                 Dort haben wir viele fortgeschrittene Themen gelernt,
                                 von denen die wichtigsten sind,<br>
                                 MVC(ASP.Net)<br>
@@ -207,15 +226,9 @@
                                 Autorization,<br>
                                 Authentication,<br>
                                 Fluent Validation,<br>
-                                Dependancy Injection<br>
+                                Software Desiging Patterns,<br>
                                 Database Managment</P>
                             <hr>
-                            <h6 class="title text-danger">2022/August bis 2022/December</h6>
-                            <P>C# & .Net Grundlagen</P>
-                            <P class="subtitle">
-                                Ich habe die Grundlagen von C# und objektorientierter Programmierung in einem Kurs für
-                                Mush Hamidani bei Udemy gelernt,
-                                nebenden die Grundlagen von .Net und EF Core auch gelernt</P>
                             <hr>
                             <h6 class="title text-danger">2022/June bis August</h6>
                             <P>CS50 Kurs</P>
@@ -231,14 +244,14 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="mt-2">
-                                <h4>Ausbildung</h4>
+                                <h4>Praktikum</h4>
                                 <span class="line"></span>
                             </div>
                         </div>
                         <div class="card-body">
-                            <h6 class="title text-danger">2022/Oktober- 2023/April</h6>
+                            <h6 class="title text-danger">2022/April- 2022/Aug</h6>
                             <P>ASP.NET Praktikum (Inno Tech)</P>
-                            <P class="subtitle">Ich habe von Oktober 2022 bis April 2023 ein Praktikum bei Inno Tech
+                            <P class="subtitle">Ich habe von April 2022 bis Aug 2022 ein Praktikum bei Inno Tech
                                 absolviert,
                                 wo ich ASP.NET gelernt und mein erlerntes Wissen in realen Projekten angewendet habe.
                             </P>
@@ -274,7 +287,17 @@
                                 <div class="progress-bar bg-danger" role="progressbar" style="width:100%"
                                     aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
+                            <h6>ASP.Net</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width:100%"
+                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
                             <h6>RESTful-API</h6>
+                            <div class="progress mb-3">
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
+                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <h6>OOP</h6>
                             <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
                                     aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -387,7 +410,7 @@
         <div class="container">
             <h2 class="mb-5 pb-4"><span class="text-danger">Mein</span> Projekt</h2>
             <div class="row">
-                
+
                 <div class="col-md-4 col-sm-6">
                     <div class="card mb-5">
                         <div class="card-header has-icon">
@@ -406,8 +429,8 @@
                                 Die "Noon E-Commerce"-Anwendung hat erfolgreich dazu beigetragen, die Standards für
                                 E-Commerce-Projekte zu erhöhen, indem sie innovative Technologien nutzt und eine
                                 umfassende Lösung für die Anforderungen des modernen Marktes bietet.</P>
-                                <a class="social-link" href="https://github.com/ahmedEldefrawy77/Noon">das Projekt auf
-                                    Github!</a>
+                            <a class="social-link" href="https://github.com/ahmedEldefrawy77/Noon">das Projekt auf
+                                Github!</a>
                         </div>
                     </div>
                 </div>
@@ -456,9 +479,9 @@
                     <div class="card-body px-4 py-3">
                         <h5 class="mb-3 card-title text-dark font-weight-bold">Printed Circuit Board</h5>
                         <P class="subtitle">
-                           Noch nicht fertig!</P>
-                            <a class="social-link" href="https://github.com/ahmedEldefrawy77/Noon">das Projekt auf
-                                Github!</a>
+                            Noch nicht fertig!</P>
+                        <a class="social-link" href="https://github.com/ahmedEldefrawy77/Noon">das Projekt auf
+                            Github!</a>
                     </div>
                 </div>
 
