--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,7 +26,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle">Hallo,schön dass Sie sich auf mein Portfolio interessieren, ich bin</h4>
                 <h1 style="font-size: 80px ;">Ahmed Eldafrawy</h1>
-                <h6 class="header-mono">Backend-Entwickler</h6>
+                <h6 class="header-mono">Full Stack-Entwickler | .Net | Angular</h6>
 
             </div>
         </div>
